# sales-ops

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  memory.md  package-lock.json  package.json  postcss.config.mjs  pyproject.toml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx
backend/: db.py  errors.py  main.py  persistence.py  session.py  uploads.py
context/: architecture.md  build-plan.md  code-standards.md  library-docs.md  progress-tracker.md  project-overview.md  ui-contract-plan.md  ui-registry.md  ui-rules.md  ui-tokens.md  workspace-migration-and-build-recovery.md
lib/: api-client.ts  formatters.ts  mock-data.ts  session-id.ts  utils.ts
sales_admin_automation_toolkit_specs/: 01_demo_order_validation.md  02_demo_inventory_allocation.md  03_demo_payment_aging.md  04_optional_crm_cleaner.md  05_integration_and_app_flow.md  06_agent_grilling_questions.md  07_resume_and_interview_positioning.md  README.md
sales_admin_automation_toolkit_ui_specs/: 01_ui_strategy_streamlit_vs_nextjs.md  02_professional_dashboard_ui_elements.md  03_page_by_page_ui_spec.md  04_react_nextjs_component_spec.md  05_state_management_and_data_flow.md  06_agentic_ui_workflow.md  07_ui_acceptance_criteria.md  08_ui_grilling_questions_for_agents.md  README_UI.md
sample_data/: README_sample_data.md  sample_customers.xlsx  sample_inventory.xlsx  sample_invoices.xlsx  sample_orders.xlsx  sample_product_master.xlsx
sample_excel_data_requirements/: 01_business_scenario.md  02_generated_files_and_schemas.md  03_data_generation_rules.md  README.md  (+5 more)
(+344 files in other folders)
