[project]
name = "sales-admin-automation-toolkit"
version = "0.1.0"
description = "Sales Admin Automation Toolkit — fictional-data Excel automation for order validation, inventory allocation, and payment aging."
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
